--- a/html-css/styles.css
+++ b/html-css/styles.css
@@ -1,3 +1,63 @@
+header{
+    padding-top: 30px;
+    padding-bottom: 30px;
+
+    background-color: black;
+    width: 100%;
+    height: 100%
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: antiquewhite;    
+    display: flex;
+
+
+    /* justify-content: space-evenly;
+    flex- */
+}
+
+#logo{
+    margin-left: 40px;
+    color: blue;
+    font-size: x-large;
+}
+.push{
+    display: flex;
+    margin-left: auto;
+
+}
+    /* flex-direction:row;
+    align-items:flex-start;
+
+
+
+    
+
+
+/* #logo{
+    display: flex;
+    justify-content: flex-start;
+}
+
+.banner{
+    flex: initial;
+    flex-direction: row;
+    justify-content: center;
+    
+} */
+
+
+
+
+
+
+
+
+/* display: flex;
+justify-content: flex-end;
+
+flex-direction:row;
+align-items:flex-start;
+
+justify-content: space-evenly; */
 /*
 
 these are the colors used in the example
