--- a/html-css/styles.css
+++ b/html-css/styles.css
@@ -1,19 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,500&display=swap');
+
+
 header{
+    background-color: black;
+    font-family: "Nunito Sans";
+    font-weight: 500;
+    font-size: 18px;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 40px;
     padding-top: 30px;
     padding-bottom: 30px;
-
-    background-color: black;
-    width: 100%;
-    height: 100%
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: antiquewhite;    
-    display: flex;
-
-
-    /* justify-content: space-evenly;
-    flex- */
 }
 
+.logo{
+    background-color: black;
+    color: dodgerblue;
+    font-size: x-large;
+    font-weight:bolder;
+}
+
+.nav-links li{
+    display: inline-block;
+    padding: 0px 40px;
+}
+
+.nav-links li a{
+    color: white;
+    text-decoration: none;
+}
+
+
+
+
+/* 
 #logo{
     margin-left: 40px;
     color: blue;
@@ -21,43 +41,14 @@ header{
 }
 .push{
     display: flex;
-    margin-left: auto;
-
-}
+    margin-left: auto; */
+/* 
+} */
     /* flex-direction:row;
     align-items:flex-start;
 
 
 
-    
-
-
-/* #logo{
-    display: flex;
-    justify-content: flex-start;
-}
-
-.banner{
-    flex: initial;
-    flex-direction: row;
-    justify-content: center;
-    
-} */
-
-
-
-
-
-
-
-
-/* display: flex;
-justify-content: flex-end;
-
-flex-direction:row;
-align-items:flex-start;
-
-justify-content: space-evenly; */
 /*
 
 these are the colors used in the example
